@@ -94,14 +94,14 @@ class BotSlackHandlerTests {
             assertTrue(wasThrottled, "Did not get throttled, is maxDuration too low?");
 
             var requests = receiver.getRequests();
-            var lastRequest = requests.get(requests.size() - 1).asObject();
+            var lastRequest = requests.getLast().asObject();
             assertEquals("test", lastRequest.get("username").asString(), lastRequest.toString());
             assertTrue(lastRequest.get("text").asString().contains("Hello"), lastRequest.toString());
 
             Thread.sleep(maxDuration.toMillis());
             var record = new LogRecord(Level.INFO, "Hello a final time!");
             handler.publish(record);
-            lastRequest = requests.get(requests.size() - 1).asObject();
+            lastRequest = requests.getLast().asObject();
             assertEquals("test", lastRequest.get("username").asString(), lastRequest.toString());
             assertTrue(lastRequest.get("text").asString().contains("Hello a final time!"), lastRequest.toString());
             assertTrue(lastRequest.get("text").asString().contains("dropped"), lastRequest.toString());
