@@ -31,7 +31,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 public class CommitCommandAsserts {
     public static void assertLastCommentContains(List<CommitComment> comments, String contains) {
         assertTrue(!comments.isEmpty());
-        var lastComment = comments.get(comments.size() - 1);
+        var lastComment = comments.getLast();
         assertTrue(lastComment.body().contains(contains), lastComment.body());
     }
 }
